--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
+*.dll filter=lfs diff=lfs merge=lfs -text
+*.dylib filter=lfs diff=lfs merge=lfs -text
+*.so filter=lfs diff=lfs merge=lfs -text
+*.exe filter=lfs diff=lfs merge=lfs -text
 Library/PackageCache/com.unity.burst@1.8.12/.Runtime/* filter=lfs diff=lfs merge=lfs -text
